--- a/index.css
+++ b/index.css
@@ -102,29 +102,32 @@ a:hover {
 .menu-links {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   background-color: white;
-  width: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3s ease-in-out;
-}
-
-.menu-links a {
-  display: block;
-  padding: 10px;
-  text-align: center;
-  font-size: 1.5rem;
-  color: black;
-  text-decoration: none;
-}
-
-.menu-links li {
-  list-style: none;
+  transition: max-height 0.3s ease-in-out;
+  z-index: 10;
 }
 
 .menu-links.open {
   max-height: 300px;
+  border-bottom: 1px solid #ccc;
+}
+.menu-links a {
+  padding: 1rem;
+  width: 100%;
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.menu-links li {
+  list-style: none;
 }
 
 .hamburger-icon.open span:first-child {
