--- a/index.css
+++ b/index.css
@@ -79,8 +79,8 @@ a:hover {
 }
 
 .hamburger-menu {
-  position: relative;
-  display: inline-block;
+  padding: 0;
+  margin: 0;
 }
 
 .hamburger-icon {
