--- a/index.css
+++ b/index.css
@@ -71,16 +71,19 @@ a:hover {
   font-size: 2rem;
   cursor: default;
 }
-
 /* HAMBURGER MENU */
 
 #hamburger-nav {
   display: none;
+  width: 100%;
 }
 
 .hamburger-menu {
+  position: relative;
+  display: inline-block;
   padding: 0;
   margin: 0;
+  width: 100%;
 }
 
 .hamburger-icon {
@@ -90,6 +93,7 @@ a:hover {
   height: 24px;
   width: 30px;
   cursor: pointer;
+  margin: 1rem;
 }
 
 .hamburger-icon span {
@@ -103,35 +107,41 @@ a:hover {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: white;
+  right: 0;
   width: 100vw;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0; /* burada padding sıfırlandığına dikkat et */
+  padding: 0;
   margin: 0;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-in-out;
-  z-index: 100;
+  z-index: 999;
 }
 
 .menu-links.open {
-  max-height: 300px;
+  max-height: 500px; /* yeterli genişlikte açılabilmesi için artırıldı */
   border-bottom: 1px solid #ccc;
 }
+
+.menu-links li {
+  list-style: none;
+  width: 100%;
+}
+
 .menu-links a {
   padding: 1rem 1.5rem;
   width: 100%;
   font-size: 1.2rem;
   text-align: left;
-  margin: 0;
+  text-decoration: none;
+  color: black;
+  display: block;
 }
 
-.menu-links li {
-  list-style: none;
-}
-
+/* Hamburger icon dönüş animasyonu */
 .hamburger-icon.open span:first-child {
   transform: rotate(45deg) translate(5px, 5px);
 }
