--- a/index.css
+++ b/index.css
@@ -103,18 +103,14 @@ a:hover {
   transition: all 0.3s ease-in-out;
 }
 
+/* Menü bağlantıları kutusu */
 .menu-links {
   position: absolute;
   top: 100%;
   left: 0;
   right: 0;
-  width: 100vw;
   background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0;
-  margin: 0;
+  width: 100%;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-in-out;
@@ -122,23 +118,32 @@ a:hover {
 }
 
 .menu-links.open {
-  max-height: 500px; /* yeterli genişlikte açılabilmesi için artırıldı */
+  max-height: 500px;
   border-bottom: 1px solid #ccc;
 }
 
-.menu-links li {
+/* Menü bağlantıları */
+.menu-links ul {
+  padding: 0;
+  margin: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.menu-links ul li {
   width: 100%;
 }
 
-.menu-links a {
+.menu-links ul li a {
+  display: block;
   padding: 1rem 1.5rem;
   width: 100%;
   font-size: 1.2rem;
   text-align: left;
   text-decoration: none;
   color: black;
-  display: block;
 }
 
 /* Hamburger icon dönüş animasyonu */
