--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 /* GENERAL */
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
@@ -30,14 +29,12 @@ p {
 }
 
 /* TRANSITION */
-
 a,
 .btn {
   transition: all 300ms ease;
 }
 
 /* DESKTOP NAV */
-
 nav,
 .nav-links {
   display: flex;
@@ -71,8 +68,8 @@ a:hover {
   font-size: 2rem;
   cursor: default;
 }
-/* HAMBURGER MENU */
 
+/* HAMBURGER MENU */
 #hamburger-nav {
   display: none;
   width: 100%;
@@ -104,7 +101,7 @@ a:hover {
 }
 
 .menu-links {
-  position: fixed; /* önemli: diğer içeriklerin önünde sabitlenmesi için */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -124,7 +121,7 @@ a:hover {
 .menu-links.open {
   transform: translateY(0);
 }
-/* Menü bağlantıları */
+
 .menu-links ul {
   padding: 0;
   margin: 0;
@@ -148,9 +145,8 @@ a:hover {
   color: black;
 }
 
-/* Hamburger icon dönüş animasyonu */
 .hamburger-icon.open span:first-child {
-  transform: rotate(30git deg) translate(5px, 5px);
+  transform: rotate(45deg) translate(5px, 5px);
 }
 
 .hamburger-icon.open span:nth-child(2) {
@@ -162,7 +158,6 @@ a:hover {
 }
 
 /* SECTIONS */
-
 section {
   padding-top: 4vh;
   min-height: fit-content;
@@ -175,7 +170,6 @@ section {
 }
 
 /* PROFILE SECTION */
-
 #profile {
   display: flex;
   justify-content: center;
@@ -225,14 +219,12 @@ section {
 }
 
 /* ICONS */
-
 .icon {
   cursor: pointer;
   height: 2rem;
 }
 
 /* BUTTONS */
-
 .btn-container {
   display: flex;
   justify-content: center;
@@ -277,7 +269,6 @@ section {
 }
 
 /* ABOUT SECTION */
-
 #about {
   position: relative;
 }
@@ -322,7 +313,6 @@ section {
 }
 
 /* EXPERIENCE SECTION */
-
 #experience {
   position: relative;
 }
@@ -360,7 +350,6 @@ section {
 }
 
 /* PROJECTS SECTION */
-
 #projects {
   position: relative;
 }
@@ -389,7 +378,6 @@ section {
 }
 
 /* CONTACT */
-
 #contact {
   display: flex;
   flex-direction: column;
@@ -429,7 +417,6 @@ section {
 }
 
 /* FOOTER SECTION */
-
 footer {
   height: auto;
   margin: 2rem 1rem 1rem;
@@ -440,7 +427,6 @@ footer p {
 }
 
 /* MEDIA QUERIES */
-
 @media screen and (max-width: 768px) {
   section {
     margin: 0 2rem;
