--- a/index.css
+++ b/index.css
@@ -68,19 +68,19 @@ a:hover {
   font-size: 2rem;
   cursor: default;
 }
-
 /* HAMBURGER MENU */
+
 #hamburger-nav {
   display: none;
   width: 100%;
+  background-color: white;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
 }
 
 .hamburger-menu {
   position: relative;
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  width: 100%;
 }
 
 .hamburger-icon {
@@ -90,62 +90,16 @@ a:hover {
   height: 24px;
   width: 30px;
   cursor: pointer;
-  margin: 1rem;
 }
 
 .hamburger-icon span {
-  width: 100%;
   height: 2px;
+  width: 100%;
   background-color: black;
-  transition: all 0.3s ease-in-out;
+  transition: 0.3s ease;
 }
 
-.menu-links {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: white;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding-left: 2rem;
-  gap: 1.5rem;
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
-  z-index: 999;
-  display: flex;
-}
-
-.menu-links.open {
-  transform: translateY(0);
-}
-
-.menu-links ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.menu-links ul li {
-  width: 100%;
-}
-
-.menu-links ul li a {
-  display: block;
-  padding: 1rem 1.5rem;
-  width: 100%;
-  font-size: 1.2rem;
-  text-align: left;
-  text-decoration: none;
-  color: black;
-}
-
-.hamburger-icon.open span:first-child {
+.hamburger-icon.open span:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
 }
 
@@ -153,8 +107,45 @@ a:hover {
   opacity: 0;
 }
 
-.hamburger-icon.open span:last-child {
+.hamburger-icon.open span:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
+}
+
+.menu-links {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding-left: 2rem;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 100;
+}
+
+.menu-links.open {
+  transform: translateY(0);
+}
+
+.menu-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.menu-links ul li a {
+  display: block;
+  padding: 1rem 0;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: black;
+  width: 100%;
 }
 
 /* SECTIONS */
