--- a/mediaquery.css
+++ b/mediaquery.css
@@ -60,6 +60,8 @@
 
   .about-containers {
     margin-top: 0;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -78,7 +80,8 @@
     margin: auto;
   }
 
-  .nav-links {
+  .nav-links,
+  .menu-links ul {
     flex-direction: column;
     gap: 0.5rem;
     text-align: center;
@@ -111,7 +114,9 @@
   .btn-container,
   .about-containers,
   .contact-info-upper-container {
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
 
   .contact-info-container {
@@ -119,7 +124,8 @@
   }
 
   .contact-info-container p,
-  .nav-links li a {
+  .nav-links li a,
+  .menu-links a {
     font-size: 1rem;
   }
 
