--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,70 +1,3 @@
-@media screen and (max-width: 1400px) {
-  #desktop-nav {
-    display: none;
-  }
-
-  #hamburger-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-  }
-
-  #profile {
-    height: auto;
-    margin-bottom: 6rem;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about-containers {
-    flex-wrap: wrap;
-  }
-
-  #contact,
-  #projects {
-    height: fit-content;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  #experience,
-  .experience-details-container {
-    margin-top: 2rem;
-  }
-
-  #profile,
-  .section-container {
-    display: block;
-  }
-
-  .arrow {
-    display: none;
-  }
-
-  section,
-  .section-container {
-    height: fit-content;
-  }
-
-  section {
-    margin: 0 5%;
-  }
-
-  .section__pic-container {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    margin: 0 auto 2rem;
-  }
-
-  .about-containers {
-    margin-top: 0;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
 @media screen and (max-width: 768px) {
   .section__pic-container {
     width: 100%;
@@ -73,11 +6,12 @@
     margin: 0 auto 1rem;
   }
 
-  .section__pic-container img.about-pic {
-    width: 100%;
+  .about-pic {
     max-width: 200px;
+    width: 100%;
     height: auto;
     margin: auto;
+    border-radius: 20px;
   }
 
   .nav-links,
