--- a/index.css
+++ b/index.css
@@ -3,6 +3,17 @@
     margin: 0 2rem;
   }
 
+  #desktop-nav {
+    display: none;
+  }
+
+  #hamburger-nav {
+    display: flex;
+    justify-content: flex-start; /* Sola yaslandı */
+    align-items: center;
+    padding: 1rem 2rem;
+  }
+
   nav {
     flex-direction: column;
     height: auto;
@@ -15,17 +26,6 @@
     font-size: 1.2rem;
   }
 
-  #desktop-nav {
-    display: none;
-  }
-
-  #hamburger-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-  }
-
   .section-container,
   .about-containers,
   .experience-details-container {
@@ -35,27 +35,32 @@
 
   .section__pic-container {
     width: 100%;
-    height: auto;
     max-width: 200px;
+    height: auto;
     margin: 0 auto 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .about-pic {
     width: 100%;
     max-width: 200px;
     height: auto;
-    margin: 0 auto 1rem;
     display: block;
+    margin: 0 auto 1rem;
     object-fit: cover;
     border-radius: 30px;
   }
 
   .title {
     font-size: 2rem;
+    text-align: center;
   }
 
   .section__text__p2 {
     font-size: 1.25rem;
+    text-align: center;
   }
 
   .details-container {
@@ -66,6 +71,7 @@
   .btn-container {
     flex-direction: column;
     align-items: center;
+    gap: 1rem;
   }
 
   .arrow {
